--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
+    "simple-mind-map": "^0.11.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
