--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@logicflow/core": "^2.0.3",
+    "@logicflow/extension": "^2.0.7",
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
