--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@logicflow/core": "^2.0.3",
     "@logicflow/extension": "^2.0.7",
+    "@univerjs/core": "^0.2.15",
+    "@univerjs/design": "^0.2.15",
+    "@univerjs/docs": "^0.2.15",
+    "@univerjs/docs-ui": "^0.2.15",
+    "@univerjs/engine-formula": "^0.2.15",
+    "@univerjs/engine-render": "^0.2.15",
+    "@univerjs/facade": "^0.2.15",
+    "@univerjs/sheets": "^0.2.15",
+    "@univerjs/sheets-formula": "^0.2.15",
+    "@univerjs/sheets-ui": "^0.2.15",
+    "@univerjs/ui": "^0.2.15",
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
